# swepub

./: .gitignore  Build-Ebook.ipynb  LICENSE  README.md  best_of_year_info.py  build_ebook.py  console.py  create_best_of_year.py  ebook_info.py  ebooklib_patch.py  epub_stylesheet.css  issue_info.py  md_renderers.py  pdf_info.py  pdf_stylesheet.css  pixi.toml  post_issue.py  pyproject.toml  renderers.py  stylesheet.css  test_best_of_year_info.py  test_build_ebook.py  test_issue_info.py  test_md_renderers.py  test_pdf_info.py  test_post_issue.py  test_renderers.py
