[project]
name = "swepub"
version = "0.1.0"
requires-python = ">=3.13.3,<3.14"
authors = [{ name = "Stephen Granade", email = "stephen@granades.com" }]
dependencies = [
    "lxml>=5.3.2,<6",
    "pillow>=11.1.0,<12",
    "click>=8.1.8,<9",
    "requests>=2.32.3,<3",
    "markdown-it-py>=3.0.0,<4",
    "pandas>=2.3.0,<3",
    "num2words>=0.5.12,<0.6",
    "types-lxml>=2025.2.24,<2026",
    "ebooklib>=0.18,<0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "jupyterlab>=4.4.0,<5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
